--- a/pages/webtools.html
+++ b/pages/webtools.html
@@ -31,19 +31,19 @@
     <ul class="project-list">
       <li>
         <span class="project-title">
-          <a href="tools/txt2csv.html">TXT → CSV Converter</a>
+          <a href="../pages/tools/txt2csv.html">TXT → CSV Converter</a>
         </span>
       </li>
 
       <li>
         <span class="project-title">
-          <a href="tools/png2tga.html">PNG → TGA Converter</a>
+          <a href="../pages/tools/png2tga.html">PNG → TGA Converter</a>
         </span>
       </li>
 
       <li>
         <span class="project-title">
-          <a href="tools/png2pdf.html">PNG → PDF Converter</a>
+          <a href="../pages/tools/png2pdf.html">PNG → PDF Converter</a>
         </span>
       </li>
     </ul>
