--- a/pages/far-cry-2-maps/fc2index.html
+++ b/pages/far-cry-2-maps/fc2index.html
@@ -6,7 +6,7 @@
     <p></p>
     <p class="title"><strong>Far Cry 2 Multiplayer Maps</strong></p>
 
-    <link rel="stylesheet" href="../assets/css/granturismo.css">
+    <link rel="stylesheet" href="../../assets/css/granturismo.css">
 </head>
 <body>
 
