--- a/pages/far-cry-2-maps/fc2index.html
+++ b/pages/far-cry-2-maps/fc2index.html
@@ -14,9 +14,10 @@
 
 
     <nav class="field">
-      <a href="../projects.html" class="btn primary">Projects</a>
-      <a href="../webtools.html" class="btn primary">Web Tools</a>
-      <a href="../music.html" class="btn primary">Music</a>
+        <a href="../pages/far-cry-2-maps/fc2index.html" class="btn primary">Far Cry 2 Multiplayer Maps</a>
+        <a href="../pages/projects.html" class="btn primary">Projects</a>
+        <a href="../pages/webtools.html" class="btn primary">Web Tools</a>
+        <a href="../pages/music.html" class="btn primary">Music</a>
     </nav>
   </div>
 
