--- a/pages/tools/png2pdf.html
+++ b/pages/tools/png2pdf.html
@@ -187,7 +187,7 @@ function loadImage(file) {
     });
 }
 </script>
-<p><a href="webtools.html">← Go Back</a></p>
+<p><a href="pages/webtools.html">← Go Back</a></p>
 <footer>
   © 2025 JeevesGB
 </footer>
