--- a/pages/tools/png2tga.html
+++ b/pages/tools/png2tga.html
@@ -118,7 +118,7 @@ function download(blob, filename) {
     a.click();
 }
 </script>
-<p><a href="webtools.html">← Go Back</a></p>
+<p><a href="pages/webtools.html">← Go Back</a></p>
 <footer>
   © 2025 JeevesGB
 </footer>
