--- a/pages/tools/txt2csv.html
+++ b/pages/tools/txt2csv.html
@@ -189,7 +189,7 @@ function importCSV() {
     input.click();
 }
 </script>
-<p><a href="webtools.html">← Go Back</a></p>
+<p><a href="pages/webtools.html">← Go Back</a></p>
 <footer>
   © 2025 JeevesGB
 </footer>
