--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,7 +14,7 @@
     <p class="title"><strong>Projects</strong></p>
 
     <nav class="field">
-      <a href="index.html" class="btn primary">← Go Back</a>
+      <a href="../index.html" class="btn primary">← Go Back</a>
     </nav>
   </div>
 
