--- a/pages/gt2c/gt2c.html
+++ b/pages/gt2c/gt2c.html
@@ -83,5 +83,9 @@
     <p> This project is a fan-made modification of Gran Turismo 2. 
       <br> It is not affiliated with or endorsed by Sony Interactive Entertainment or Polyphony Digital.</br>
     </p>
+
+<nav class="field">
+      <a href="../index.html" class="btn primary">← Back to Home</a>
+</nav>
 </body>
 </html>
