--- a/pages/gt4p/gt4p.html
+++ b/pages/gt4p/gt4p.html
@@ -84,7 +84,7 @@
       <br> It is not affiliated with or endorsed by Sony Interactive Entertainment or Polyphony Digital.</br>
     </p>
 <nav class="field">
-      <a href="../../index.html" class="btn primary">← Back to Home</a>
+      <a href="../../../index.html" class="btn primary">← Back to Home</a>
 </nav>
   </footer>
 </body>
