--- a/pages/gt2c/gt2c.html
+++ b/pages/gt2c/gt2c.html
@@ -85,7 +85,7 @@
     </p>
 
 <nav class="field">
-      <a href="../index.html" class="btn primary">← Back to Home</a>
+      <a href="../../../index.html" class="btn primary">← Back to Home</a>
 </nav>
 </body>
 </html>
