--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <p></p>
     <section class="gt2c-feature">
-    <a href="pages/gt2c/gt2c.html" class="gt2c-button">
+    <a href="pages/gt2c/info.html" class="gt2c-button">
         <img
           src="pages/gt2c/images/discordgt2clogo copy.png"
           align="center"
