--- a/pages/gt2c/info.html
+++ b/pages/gt2c/info.html
@@ -12,16 +12,16 @@
 
 
     <nav class="field">
-      <a href="pages/projects.html" class="btn primary">Projects</a>
-      <a href="pages/webtools.html" class="btn primary">Web Tools</a>
-      <a href="pages/far-cry-2-maps/fc2index.html" class="btn primary">Far Cry 2 Multiplayer Maps</a>
-      <a href="pages/music.html" class="btn primary">Music</a>
+      <a href="../../pages/projects.html" class="btn primary">Projects</a>
+      <a href="../../pages/webtools.html" class="btn primary">Web Tools</a>
+      <a href="../../pages/far-cry-2-maps/fc2index.html" class="btn primary">Far Cry 2 Multiplayer Maps</a>
+      <a href="../../pages/music.html" class="btn primary">Music</a>
       <a href="https://jeevesgb.itch.io/" class="btn primary">Itch.io</a>
 
     </nav>
                                           <p></p>
     <nav class="field">
-      <a href="pages/homoligation.html" class="btn primary">Homoligation Documents</a>
+      <a href="../../pages/homoligation.html" class="btn primary">Homoligation Documents</a>
       <a href="https://discord.gg/m5fmspHa9m" class="btn primary">Gran Turismo 2 Concept & Spec VII Discord</a>
     </nav>
 </div>
@@ -55,7 +55,7 @@
     <p>
       To download the latest patch and instructions on how to install it, please click the link below.
     </p>
-    
+
 <div class="container">
     <nav class="field">
       <a href="gt2c.html" class="btn primary">Download</a>
