--- a/pages/gt2c/info.html
+++ b/pages/gt2c/info.html
@@ -39,7 +39,7 @@
     />
 
   <main>
-    <h2>About Gran Turismo 2 Concept</h2>
+    <h2>About</h2>
     <p>
       Gran Turismo 2 Concept is a fan-made modification of the original Gran Turismo 2 game for the PlayStation. This project aims to enhance the gaming experience by redesigning the menus to resemble those of Gran Turismo 3, while also introducing new cars and events for players to enjoy.
     </p>
