--- a/pages/gt2c/info.html
+++ b/pages/gt2c/info.html
@@ -12,6 +12,7 @@
 
 
     <nav class="field">
+        <a href="../../index.html" class="btn primary">Home</a>
       <a href="../../pages/projects.html" class="btn primary">Projects</a>
       <a href="../../pages/webtools.html" class="btn primary">Web Tools</a>
       <a href="../../pages/far-cry-2-maps/fc2index.html" class="btn primary">Far Cry 2 Multiplayer Maps</a>
