--- a/pages/gt2c/info.html
+++ b/pages/gt2c/info.html
@@ -1,67 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-  <link rel="stylesheet" href="../../assets/css/granturismo.css">
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gran Turismo 2 Concept - Info</title>
+
+  <link rel="stylesheet" href="../../assets/css/granturismo.css">
 </head>
-<div class="container">
-
-
-    <nav class="field">
-        <a href="../../index.html" class="btn primary">Home</a>
-      <a href="../../pages/projects.html" class="btn primary">Projects</a>
-      <a href="../../pages/webtools.html" class="btn primary">Web Tools</a>
-      <a href="../../pages/far-cry-2-maps/fc2index.html" class="btn primary">Far Cry 2 Multiplayer Maps</a>
-      <a href="../../pages/music.html" class="btn primary">Music</a>
-      <a href="https://jeevesgb.itch.io/" class="btn primary">Itch.io</a>
-
-    </nav>
-                                          <p></p>
-    <nav class="field">
-      <a href="../../pages/homoligation.html" class="btn primary">Homoligation Documents</a>
-      <a href="https://discord.gg/m5fmspHa9m" class="btn primary">Gran Turismo 2 Concept & Spec VII Discord</a>
-    </nav>
-</div>
-
 
 <body>
-  <header>
+
+  <!-- Navigation -->
+  <div class="container">
+    <nav class="field">
+      <a href="../../index.html" class="btn primary">Home</a>
+      <a href="../../pages/projects.html" class="btn primary">Projects</a>
+      <a href="../../pages/webtools.html" class="btn primary">Web Tools</a>
+      <a href="../../pages/far-cry-2-maps/fc2index.html" class="btn primary">
+        Far Cry 2 Multiplayer Maps
+      </a>
+      <a href="../../pages/music.html" class="btn primary">Music</a>
+      <a href="https://jeevesgb.itch.io/" class="btn primary">Itch.io</a>
+    </nav>
+      <p></p>
+    <nav class="field">
+      <a href="../../pages/homoligation.html" class="btn primary">
+        Homoligation Documents
+      </a>
+      <a href="https://discord.gg/m5fmspHa9m" class="btn primary">
+        Gran Turismo 2 Concept &amp; Spec VII Discord
+      </a>
+    </nav>
+  </div>
+
+  <!-- Page Header -->
+  <header class="page-header">
     <h1>Gran Turismo 2 Concept</h1>
-  </header>
-  <img
+    <img
       src="images/gt2clogo.png"
       alt="Gran Turismo 2 Concept Logo"
       class="logo"
       width="300"
     />
+  </header>
 
-  <main>
-    <h2>About</h2>
-    <p>
-      Gran Turismo 2 Concept is a fan-made modification of the original Gran Turismo 2 game for the PlayStation. This project aims to enhance the gaming experience by redesigning the menus to resemble those of Gran Turismo 3, while also introducing new cars and events for players to enjoy.
-    </p>
+  <!-- Main Content -->
+  <main class="content">
 
-    <h2>Features</h2>
-    <ul>
+    <section>
+      <h2>About</h2>
+      <p>
+        Gran Turismo 2 Concept is a fan-made modification of the original
+        Gran Turismo 2 game for the PlayStation. This project aims to enhance
+        the gaming experience by redesigning the menus to resemble those of
+        Gran Turismo 3, while also introducing new cars and events for players
+        to enjoy.
+      </p>
+    </section>
+
+    <section>
+      <h2>Features</h2>
+      <ul>
         <li>Redesigned menus inspired by Gran Turismo 3</li>
         <li>New cars added to the roster</li>
         <li>Additional racing events and challenges</li>
-    </ul>
+      </ul>
+    </section>
 
-    <h2>Download and Installation</h2>
-    <p>
-      To download the latest patch and instructions on how to install it, please click the link below.
-    </p>
+    <section class="download">
+      <h2>Download and Installation</h2>
+      <p>
+        To download the latest patch and instructions on how to install it,
+        please click the link below.
+      </p>
 
-<div class="container">
-    <nav class="field">
-      <a href="gt2c.html" class="btn primary">Download</a>
-    </nav>
-</div>
-
+      <div class="container">
+        <nav class="field">
+          <a href="gt2c.html" class="btn primary">Download</a>
+        </nav>
+      </div>
+    </section>
 
   </main>
+
+</body>
+</html>
